Fixed bank Card issue
Need to fix background overlapping iframe map later

--- a/css/banks_squares.css
+++ b/css/banks_squares.css
@@ -41,20 +41,6 @@
 
 
   /* Styles for the button */
-  .prestations-button {
-    background-color: #4CAF50;
-    border: none;
-    color: white;
-    padding: 8px 16px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 20px;
-  }
-
   /* Styles for the pop-up window */
   .modal {
     display: none;
